# vectorwave.io

./: .env.example  .gitignore  .gitmodules  .gitmodules.example  .pre-commit-config.yaml  AI-AGENTS-IMPLEMENTATION.md  AI_TRENDS_API_SOURCES_REPORT.md  AI_WRITING_FLOW_DESIGN.md  AI_WRITING_FLOW_DIAGRAM.md  AI_WRITING_FLOW_INTEGRATION_REPORT.md  AI_WRITING_FLOW_TASKS.md  ANALIZA_BIBLIOTEK_UI_AUTOAKCJE.md  API.md  API_ENDPOINTS.md  ARCHITECTURE.md  ARCHITECTURE_RECOMMENDATIONS.md  AUDIT_QUICK_START.md  CHANGELOG.md  CODE_CLEANUP_PLAN.md  COMPLETE_USER_WORKFLOW_ARCHITECTURE.md  CREWAI_COMMANDS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_MAP.md  DOCUMENTATION_OBSOLESCENCE_REPORT.md  Dockerfile  Dockerfile.minimal  ENHANCED_ORCHESTRATOR_MASTER_PLAN.md  ENV_SETUP.md  IMPLEMENTATION_GUIDE.md  Makefile  OPENAPI_USAGE.md  PARALLEL_PHASE_PROGRESS.md  PHASE_2_3_MIGRATION_COMPLETE.md  PORT_ALLOCATION.md  PROCESS_SUBMODULES_DIAGRAM.md  PROJECT_CONTEXT.md  (+45 more)
ai-writing-flow-service/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CREWAI_FLOW_ATOMIC_TASKS_V2.md  CURSOR_TEST_FILE_2024_UNIQUE.txt  DEPLOYMENT_STATUS.json  Dockerfile  FINAL_TEST_REPORT.md  PROFILING_SYSTEM_DOCUMENTATION.md  README.md  TASK_35_1_COMPLETION_REPORT.md  TEST_REPORT.md  UJEDNOLICONY_PLAN_CREWAI_FLOW.md  WEEK_4_COMPLETION_SUMMARY.md  init_monitoring_storage.py  performance_tests.py  production_processing_results.json  pyproject.toml  pytest.ini  requirements.txt  requirements_enhanced.txt  router_accuracy_results.json  run_production.py  run_simple.py  sitecustomize.py  test_ai_writing_flow_basic.py  test_audience_tools_proper.py  test_complete_human_flow.py  test_comprehensive_integration.py  test_crewai_agent_integration.py  test_crewai_flow_e2e.py  test_decision_logging.py  test_dev_logging.py  test_dev_setup.py  test_enhanced_content_analysis_agent.py  test_error_handling_simplified.py  test_error_handling_validation.py  test_final_integration.py  test_flow_state_persistence.py  test_git_workflows.py  (+20 more)
ai-writing-flow-service/.github/: pull_request_template.md
ai-writing-flow-service/deployment/: .last_backup  DEPLOYMENT_VALIDATION_REPORT.json  deploy_flow_v2.sh  deploy_v2_minimal.sh  rollback_flow_v2.sh  setup_monitoring.sh
ai-writing-flow-service/metrics/: session_20250804.json
ai-writing-flow-service/monitoring/: collect_metrics.py  health_check.py
ai-writing-flow-service/profiles/: test_profile.json  test_profile_cpu.txt
ai-writing-flow-service/scaling_reports/: scaling_metrics_20250804_112121.json  scaling_metrics_20250804_112127.json  scaling_report_20250804_112121.md
ai-writing-flow-service/scripts/: git_workflow.py  validate_environment.py
ai-writing-flow-service/src/: main.py  test_start_functionality.py
ai-writing-flow-service/test_metrics/: session_20250804.json
ai_publishing_cycle/: .gitignore  README.md  content_classification.json  content_metadata.json  crewai_flow.html  normalization_report.json  package-lock.json  package.json  pyproject.toml  requirements-ui.txt  start_backend.sh  start_ui.sh  test_agui.html  webpack.config.js
ai_publishing_cycle/metrics_data/: metrics.db
ai_publishing_cycle/src/: browser-client.js
ai_publishing_cycle/static/: agui-client.bundle.js
ai_writing_flow/: .coverage  .gitmessage  CHANGELOG.md  CREWAI_FLOW_ARCHITECTURE_PLAN.md  CREWAI_FLOW_ATOMIC_TASKS.md  CREWAI_FLOW_ATOMIC_TASKS_V2.md  CREWAI_FLOW_FIX_PLAN.md  FLOOD_FIX.md  INTEGRATION_TEST_REPORT.md  Makefile  NAPRAWA_FLOW.md  PHASE1_COMPLETION_REPORT.md  PHASE_4_5_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  RESOURCE_CONTENTION_TEST_REPORT.md  ROUTER_DEPENDENCY_MAP.md  SCALING_VALIDATION_REPORT.md  TASK_34_2_COMPLETION_REPORT.md  UJEDNOLICONY_PLAN_CREWAI_FLOW.md  WEEK1_TEST_RESULTS.md  example_content.md  knowledge_config.py  optimization_test_results.json  process_example.py  processed_production_content.md  pyproject.toml  pytest.ini  test_actual_search.py  test_content_analysis_agent.py  test_development_profiling.py  test_env_validation.py  test_feedback_processing.py  test_health_dashboard.py  test_human_approval_flow.py  test_inputs_only.py  test_kb_enhanced_routing.py  test_kb_integration_flow.py  test_kb_search_in_flow.py  (+11 more)
ai_writing_flow/config/: test_dev_config.json
ai_writing_flow/deployment/: deploy_v2_minimal.sh  validate_deployment.py
ai_writing_flow/docs/: DEVELOPER_QUICKSTART.md
ai_writing_flow/examples/: api_usage_example.py
ai_writing_flow/metrics_data/: flow_metrics.db
ai_writing_flow/monitoring/: MONITORING_GUIDE.md  start_dashboard.py
ai_writing_flow/profiles/: test_profile_cpu.stats
ai_writing_flow/scaling_reports/: scaling_report_20250804_112127.md
ai_writing_flow/scripts/: setup_dev_env.py
ai_writing_flow/tests/: README_STRESS_TESTS.md  conftest.py  test_10_concurrent_flows.py  test_10_concurrent_flows_simplified.py  test_crewai_installation.py  test_e2e_kolegium_flow.py  test_editorial_client.py  test_editorial_utils.py  test_flow_control_state.py  test_flow_methods.py  test_knowledge_adapter.py  test_retry_manager_complete.py  test_router_accuracy.py  test_rule_summary_integration.py  test_scaling_behavior.py  test_style_crew_replacement.py  test_task_2_1_2d_integration.py  test_validation_checkpoints.py  test_writing_crew_integration.py
knowledge-base/: .coverage  .gitignore  ARCHITECTURE.md  DEPLOYMENT_REPORT.md  QA_TEST_INSTRUCTIONS.md  README.md  UJEDNOLICONY_PLAN_CREWAI_FLOW.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_populate.py  test_requirements.txt  test_structure_validation.py
knowledge-base/config/: knowledge_base.yaml
knowledge-base/docker/: Dockerfile  docker-compose.yml
knowledge-base/examples/: crewai_best_practices.md  flow_patterns_search.md  search_strategies_demo.md  troubleshooting_router_loops.md
knowledge-base/scripts/: basic_test.py  init.sql  populate_crewai_docs.py  (+6 more)
(+745 files in other folders)
