[project]
name = "ai_publishing_cycle"
version = "0.1.0"
description = "ai_publishing_cycle using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==0.152.0",
]

[project.scripts]
kickoff = "ai_publishing_cycle.main:kickoff"
run_crew = "ai_publishing_cycle.main:kickoff"
plot = "ai_publishing_cycle.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
